[package]
authors = ["Peter Atashian <retep998@gmail.com>"]
name = "bunnybutt"
version = "0.1.0"

[profile.release]
debug = true
panic = "abort"

[dependencies]
googl = "0.1"
irc = { default-features = false, version = "0.11" }
lazy_static = "1.1"
serde = "1.0"
serde_json = "1.0"
url = "1.7"

[dependencies.mediawiki]
git = "https://github.com/FTB-Gamepedia/mediawiki-rs.git"
