[package]
authors = ["Peter Atashian <retep998@gmail.com>"]
name = "bunnybutt"
version = "0.1.0"
edition = "2018"

[profile.release]
debug = true
panic = "abort"

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = "1.0"
serde_json = "1.0"
url = "2.1"

[dependencies.mediawiki]
git = "https://github.com/FTB-Gamepedia/mediawiki-rs.git"
